[fix] bug fixed scroll stuck

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
 @import "tailwindcss";
 @import "tailwindcss/utilities";
-.page-container {
+  html, body {
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: 100%;
+    width: 100%;
+  }
+
+  .page-container {
     position: relative;
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
+    min-height: 100vh;
+    overflow: auto;
   }
   
   @keyframes elasticMove {
@@ -78,6 +85,8 @@
     
   html, body {
     overflow-x: hidden;
+    overflow-y: auto;
+    height: 100%;
     width: 100%;
   }
   
